<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Regolazioni">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_splash"
            android:summary="@string/pref_description_splash_enable"
            android:title="@string/pref_title_splash_enable" />

        <ListPreference
            android:dependency="switch_splash"
            android:defaultValue="4"
            android:entries="@array/pref_titles_splash_duration"
            android:entryValues="@array/pref_values_splash_duration"
            android:key="list_splash"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_splash_duration" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_tutorial"
            android:summary="@string/pref_description_tutorial_enable"
            android:title="@string/pref_title_tutorial_enable" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Generali">

        <Preference
            android:title="@string/pref_title_share_app"
            android:key="share_action">
        </Preference>

        <Preference
            android:title="@string/pref_title_launch_tutorial"
            android:key="tutorial_action">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>